--- a/November/.vscode/settings.json
+++ b/November/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.associations": {
     "xutility": "cpp",
     "cstdlib": "cpp",
-    "xstring": "cpp"
+    "xstring": "cpp",
+    "xstddef": "cpp"
   }
 }
