--- a/November/.vscode/settings.json
+++ b/November/.vscode/settings.json
@@ -6,6 +6,7 @@
     "xstddef": "cpp",
     "vector": "cpp",
     "algorithm": "cpp",
-    "iostream": "cpp"
+    "iostream": "cpp",
+    "utility": "cpp"
   }
 }
